@@ -1,3 +1,8 @@
+2002-11-23  Anders Eriksson  <anders@umunet.org>
+
+	* src/gerbv.c: Fixed bug 642600, Don't use default labels without
+	  any statement after. Also use comments for label after #endif.
+
 -- Release 0.11 --
 
 2002-11-19  Stefan Petersen  <spe@stacken.kth.se>
